k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: devops-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 753397112861.dkr.ecr.us-east-1.amazonaws.com/frontend:cd8846c90ad8add1672f053852c25e6d548b7ada
          ports:
            - containerPort: 80
