k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: devops-store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: 753397112861.dkr.ecr.us-east-1.amazonaws.com/product-service:333d282aaead53471aa0cff433091970081b29eb
          ports:
            - containerPort: 5000
